--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,11 +1,22 @@
 <h1>Person</h1>
 
-<h1><%= @person.first_name %></h1>
-<h4><%= @person.last_name %></h1>
+<h2><%= @person.full_name %></h2>
+
+<h3><%= "Age" %></h3>
 <p><%= @person.age %></p>
+
+<h3><%= "Hair Color" %></h3>
 <p><%= @person.hair_color %></p>
+
+<h3><%= "Eye Color" %></h3>
 <p><%= @person.eye_color %></p>
+
+<h3><%= "Gender" %></h3>
 <p><%= @person.gender %></p>
+
+<h3><%= "Alive?" %></h3>
 <p><%= @person.alive %></p>
 
-<%= link_to 'Back', people_path %>
+<br>
+
+<h3><%= link_to 'Back', people_path %></h3>
