--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#hom</h1>
-<p>Find me in app/views/static_pages/hom.html.erb</p>
+<br>
+<h1>"Welcome to PEOPLE App!"</h1>
+<p> "An App that allows you to store records of people" </p>
+
+<br>
+
+<p><%= link_to 'Start here by adding a new person!', new_person_path %></p>
