--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,2 @@
-<%= link_to 'Home', root_path %>
-
-<%= link_to 'People', people_path %>
+<h4><%= link_to 'Home', root_path %>
+<%= link_to 'People', people_path %></h4>
