--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit People</h1>
+<h1> ✏️Edit People✏️</h1>
 
 <%= form_for @person do |f| %>
 
@@ -18,10 +18,10 @@
   <%= f.text_field :eye_color %><br>
   
   <%= f.label :gender %>
-  <%= f.text_field :gender %><br>
+   <%= f.select :gender, options_for_select([["🙎‍♀️"], ["‍🙎‍♂️️"]]) %><br>
   
   <%= f.label :alive %>
   <%= f.text_field :alive %><br></h3>
   
-  <%= f.submit %>
+  <p class ="c_button"><%= f.submit %>
   <% end %>
