--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,10 @@
-<br>
-<h1>"Welcome to PEOPLE App!"</h1>
-<p> "An App that allows you to store records of people" </p>
+
+<h1>Welcome to PEOPLE!</h1>
+<p> An App that allows you to store records of people. </p>
 
 <br>
-
-<p><%= link_to 'Start here by adding a new person!', new_person_path %></p>
+<p class="start_button">
+<span>
+<%= link_to 'Start by adding a new person!', new_person_path %>
+</span>
+</p>
