--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,2 +1,9 @@
-<h4><%= link_to 'Home', root_path %>
-<%= link_to 'People', people_path %></h4>
+<p class="nav">
+<span>
+<%= link_to 'Home', root_path %>
+</span>
+<span>
+<%= link_to 'People', people_path %>
+</span>
+</p>
+<br>
