--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,4 +1,4 @@
-<h2><button><%= link_to 'Add A New Person', new_person_path %></button></h2><br>
+<p class="button"><span><%= link_to 'Add A New Person', new_person_path %></span></p>
 
 <h2> List of People: </h2>
 
@@ -6,8 +6,7 @@
 <% @people.each do |person| %>
 <li>
 <h3><%= person.full_name %></h3>
-<h5><%= link_to 'Show Person', person_path(person)%>
-<%= link_to 'Edit Person', edit_person_path(person) %>
-<%= link_to 'Delete Person', person, method: :delete %></h5>
+<p class="show_button"><%= link_to 'Show Record', person_path(person)%>
+</p>
 
 <% end %>
