--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,8 +1,9 @@
- <h1>New People</h1>
+ <h1>👇 New Person 👇</h1>
 
  <%= form_for @person do |f| %>
 
-   <h3><%= f.label :first_name %>
+   <h3>
+   <%= f.label :first_name %>
    <%= f.text_field :first_name %><br>
   
    <%= f.label :last_name %>
@@ -18,11 +19,12 @@
    <%= f.text_field :eye_color %><br>
   
    <%= f.label :gender %>
-   <%= f.text_field :gender %><br>
+   <%= f.select :gender, options_for_select([["🙎‍♀️"], ["‍🙎‍♂️️"]]) %><br>
   
    <%= f.label :alive %>
-   <%= f.check_box :alive %><br></h3>
+   <%= f.check_box :alive %><br>
+   </h3>
 
-   <%= f.submit %>
+   <p class ="c_button"><%= f.submit %></p>
   <% end %>
   
