--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,6 +1,6 @@
-<h1>Person</h1>
+<h1>This 🤓 is..</h1>
 
-<h2><%= @person.full_name %></h2>
+<h2 class ="name">  <%= @person.full_name %> </h2>
 
 <h3><%= "Age" %></h3>
 <p><%= @person.age %></p>
@@ -12,11 +12,16 @@
 <p><%= @person.eye_color %></p>
 
 <h3><%= "Gender" %></h3>
-<p><%= @person.gender %></p>
+<p class ="gender"><%= @person.gender %></p>
 
-<h3><%= "Alive?" %></h3>
+<h3><%= "💀 Alive? 💀" %></h3>
 <p><%= @person.alive %></p>
 
 <br>
 
-<h3><%= link_to 'Back', people_path %></h3>
+<p class ="e_button"><%= link_to '✏️ Edit', edit_person_path %></p>
+<p> 
+<p class ="e_button"><%= link_to '🗑 Delete', @person, method: :delete %></p>
+<p>
+<p class ="e_button"><%= link_to '👈BACK👈', people_path %></p>
+<br>
